--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     -->
     <title>My Shoe Store</title>
     <!-- <marquee behavior="" direction="RTL">my marquee </marquee> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
